tests/baselines/reference/computedPropertyNames22_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames22_ES5.ts(4,13): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames22_ES5.ts (1 errors) ====
    class C {
        bar() {
            var obj = {
                [this.bar()]() { }
                ~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
            };
            return 0;
        }
    }